igt@kms_dsc@ subtests - *ERROR* CPU pipe [ABCD] FIFO underrun: port,transcoder
<7> [101.827853] i915 0000:03:00.0: [drm:intel_enable_transcoder [i915]] enabling pipe A
<7> [101.828126] i915 0000:03:00.0: [drm:intel_audio_codec_enable [i915]] [CONNECTOR:236:DP-1][ENCODER:235:DDI A/PHY A] Enable audio codec on [CRTC:80:pipe A], 36 bytes ELD
<7> [101.828295] i915 0000:03:00.0: [drm:hsw_audio_codec_enable [i915]] h_active = 3840 link_clk = 810000 :lanes = 4 vdsc_bpp = 35 cdclk = 612000
<3> [101.828902] i915 0000:03:00.0: [drm] *ERROR* CPU pipe A FIFO underrun: port,transcoder,
<7> [101.844886] i915 0000:03:00.0: [drm:hsw_audio_config_update [i915]] using automatic Maud, Naud
<7> [101.861537] i915 0000:03:00.0: [drm:gen9_dbuf_slices_update [i915]] Updating dbuf slices to 0x3
<7> [101.862136] i915 0000:03:00.0: [drm:verify_connector_state [i915]] [CONNECTOR:236:DP-1]
<7> [101.862343] i915 0000:03:00.0: [drm:intel_modeset_verify_crtc [i915]] [CRTC:80:pipe A]
<7> [101.862888] i915 0000:03:00.0: [drm:intel_ddi_get_config [i915]] [ENCODER:235:DDI A/PHY A] Fec status: 1
<7> [101.863579] i915 0000:03:00.0: [drm:i915_dsc_fec_support_write [i915]] Copied 1 bytes from user to force DSC
<7> [101.863741] i915 0000:03:00.0: [drm:i915_dsc_fec_support_write [i915]] Got false for DSC Enable
<7> [101.864491] i915 0000:03:00.0: [drm:drm_mode_rmfb_work_fn] Removing [FB:289] from all active usage due to RMFB ioctl
<7> [101.864573] i915 0000:03:00.0: [drm:atomic_remove_fb] Disabling [PLANE:31:plane 1A] because [FB:289] is removed